@startuml
interface ICombo {
    + string Name
    + decimal Price
    + string Description
    
    + decimal GetDiscount()
}

class Order {
    + ICombo Combo
    + int Quantity

    + void Print()
}


ICombo <|.. Combo
Order <|.. OrderCombo
Combo <|-- SimpleCombo
Combo <|-- SuperCombo

Order o-- Combo

@enduml